# grpc-error-details

./: .gitignore
cpp/client/: CMakeLists.txt  main.cpp
cpp/server/: .clang-format  CMakeLists.txt  FindGrpc.cmake  main.cpp
csharp/client/: Program.cs  client.csproj
csharp/server/: Program.cs
java/server/: pom.xml
java/server/src/main/java/danieljoos/grpc/errordetails/: Main.java
proto/: example.proto
